# s8_object_aligner

./: CMakeLists.txt  README.md  package.xml
action/: ObjectAlign.action
include/s8_object_aligner/: object_aligner_node.h
parameters/: parameters.json
src/: .object_aligner_node.cpp.swo  .object_aligner_node.cpp.swp  object_aligner_node.cpp
