  <package>
 <name>s8_object_aligner</name>
  <version>0.0.0</version>
  <description>
    Will align the robot to the robot (so it will be at good position in front of the robot)
  </description>
  <license>BSD</license>

  <author email="lwiener@kth.se">Lucas</author>
  <maintainer email="lwiener@kth.se">Lucas</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>s8_common_node</build_depend>
  <build_depend>s8_msgs</build_depend>
  <build_depend>s8_motor_controller</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>s8_common_node</run_depend>
  <run_depend>s8_msgs</run_depend>
  <run_depend>s8_motor_controller</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>

</package>
